// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Redundancy pay calculator ResultsBox Component renders the component with provided props 1`] = `
<div
  class="border-[8px] rounded-bl-[36px] border-teal-400 p-6 mb-4 lg:mb-0"
>
  <h4
    class="text-xl md:text-2xl text-gray-800 font-bold mb-4"
  >
    You could be entitled to a minimum redundancy pay of:
  </h4>
  <h2
    class="text-3xl md:text-5xl text-gray-800 font-bold mb-4"
  >
    £
    1,587
  </h2>
  <p
    class="mb-4"
  >
    This figure is based on what you've told us. Your actual redundancy pay may vary depending on exact dates.
  </p>
  <details
    class="group tool-expand"
    data-testid="expandable-section"
  >
    <summary
      class="text-magenta-500 flex [&::-webkit-details-marker]:hidden cursor-pointer py-2 outline-none focus:shadow-expander-focus underline hover:no-underline group"
    >
      <svgr-mock
        class="group-open:rotate-[-180deg] text-magenta-500 shrink-0 w-5 mr-2"
      />
      <div
        class="block"
        data-testid="summary-block-title"
      >
        How is this calculated?
      </div>
    </summary>
    <div
      class="mb-4 text-gray-800 text-base leading-[28px] tracking-[0.18px] pt-2"
    >
      <div
        class="flex items-center"
        data-testid="list-element"
      >
        <ul
          class="marker:mr-2 marker:pr-2 space-y-2 marker:leading-snug list-disc marker:text-gray-800 px-2 mx-4 mt-4 mr-2 list-outside"
          start="-1"
        >
          <li>
            The minimum you're entitled to is the amount you'd get as statutory redundancy pay
          </li>
          <li>
            Your entitlement is
             
            <b>
              5.5
               
              weeks
            </b>
          </li>
        </ul>
      </div>
      <div
        class="my-4"
      >
        <hr
          class="border-slate-400"
        />
      </div>
      <div>
        <p
          class="pb-2"
        >
          You get:
        </p>
      </div>
      <div
        class="flex items-center"
        data-testid="list-element"
      >
        <ul
          class="marker:mr-2 marker:pr-2 space-y-2 marker:leading-snug list-disc marker:text-gray-800 px-2 mx-4 mr-2 list-outside"
          start="-1"
        >
          <li>
            <b>
              0.5 week's pay
            </b>
             for each full year worked when you were
             
            <b>
              under 22
            </b>
          </li>
          <li>
            <b>
              1 week's pay
            </b>
             for each full year worked when you're between
             
            <b>
              22 and 41
            </b>
          </li>
          <li>
            <b>
              1.5 week's pay
            </b>
             for each full year worked when you're
             
            <b>
              41 or older
            </b>
          </li>
        </ul>
      </div>
      <div
        class="my-4"
      >
        <hr
          class="border-slate-400"
        />
      </div>
      <div
        class="flex items-center"
        data-testid="list-element"
      >
        <ul
          class="marker:mr-2 marker:pr-2 space-y-2 marker:leading-snug list-disc marker:text-gray-800 px-2 mx-4 mr-2 list-outside"
          start="-1"
        >
          <li>
            Pay is capped at 
            <b>
              £
              719
            </b>
             per week
          </li>
          <li>
            Length of service is capped at
             
            <b>
              20
               years
            </b>
          </li>
          <li>
            The maximum amount of statutory redundancy pay is
             
            <b>
              £
              21,570
            </b>
          </li>
        </ul>
      </div>
    </div>
  </details>
</div>
`;

exports[`Redundancy pay calculator ResultsBox Component renders the component with provided props 2`] = `
<div
  class="border-[8px] rounded-bl-[36px] border-teal-400 p-6 mb-4 lg:mb-0"
>
  <h4
    class="text-xl md:text-2xl text-gray-800 font-bold mb-4"
  >
    You've told us your contractual redundancy pay will be:
  </h4>
  <h2
    class="text-3xl md:text-5xl text-gray-800 font-bold mb-4"
  >
    £
    10,000
  </h2>
</div>
`;

exports[`Redundancy pay calculator ResultsBox Component renders the component with provided props 3`] = `
<div
  class="border-[8px] rounded-bl-[36px] border-teal-400 p-6 mb-4 lg:mb-0"
>
  <h4
    class="text-xl md:text-2xl text-gray-800 font-bold mb-4"
  >
    You've told us your contractual redundancy pay will be:
  </h4>
  <h2
    class="text-3xl md:text-5xl text-gray-800 font-bold mb-4"
  >
    £
    1,000
  </h2>
  <h4
    class="text-xl md:text-2xl text-gray-800 font-bold mb-4"
  >
    But based on your answers you could be entitled to a minimum of:
  </h4>
  <h2
    class="text-3xl md:text-5xl text-gray-800 font-bold mb-4"
  >
    £
    1,587
  </h2>
  <p
    class="mb-4"
  >
    This figure is based on what you've told us. Your actual redundancy pay may vary depending on exact dates.
  </p>
  <details
    class="group tool-expand"
    data-testid="expandable-section"
  >
    <summary
      class="text-magenta-500 flex [&::-webkit-details-marker]:hidden cursor-pointer py-2 outline-none focus:shadow-expander-focus underline hover:no-underline group"
    >
      <svgr-mock
        class="group-open:rotate-[-180deg] text-magenta-500 shrink-0 w-5 mr-2"
      />
      <div
        class="block"
        data-testid="summary-block-title"
      >
        How is this calculated?
      </div>
    </summary>
    <div
      class="mb-4 text-gray-800 text-base leading-[28px] tracking-[0.18px] pt-2"
    >
      <div
        class="flex items-center"
        data-testid="list-element"
      >
        <ul
          class="marker:mr-2 marker:pr-2 space-y-2 marker:leading-snug list-disc marker:text-gray-800 px-2 mx-4 mt-4 mr-2 list-outside"
          start="-1"
        >
          <li>
            The minimum you're entitled to is the amount you'd get as statutory redundancy pay
          </li>
          <li>
            Your entitlement is
             
            <b>
              5.5
               
              weeks
            </b>
          </li>
        </ul>
      </div>
      <div
        class="my-4"
      >
        <hr
          class="border-slate-400"
        />
      </div>
      <div>
        <p
          class="pb-2"
        >
          You get:
        </p>
      </div>
      <div
        class="flex items-center"
        data-testid="list-element"
      >
        <ul
          class="marker:mr-2 marker:pr-2 space-y-2 marker:leading-snug list-disc marker:text-gray-800 px-2 mx-4 mr-2 list-outside"
          start="-1"
        >
          <li>
            <b>
              0.5 week's pay
            </b>
             for each full year worked when you were
             
            <b>
              under 22
            </b>
          </li>
          <li>
            <b>
              1 week's pay
            </b>
             for each full year worked when you're between
             
            <b>
              22 and 41
            </b>
          </li>
          <li>
            <b>
              1.5 week's pay
            </b>
             for each full year worked when you're
             
            <b>
              41 or older
            </b>
          </li>
        </ul>
      </div>
      <div
        class="my-4"
      >
        <hr
          class="border-slate-400"
        />
      </div>
      <div
        class="flex items-center"
        data-testid="list-element"
      >
        <ul
          class="marker:mr-2 marker:pr-2 space-y-2 marker:leading-snug list-disc marker:text-gray-800 px-2 mx-4 mr-2 list-outside"
          start="-1"
        >
          <li>
            Pay is capped at 
            <b>
              £
              719
            </b>
             per week
          </li>
          <li>
            Length of service is capped at
             
            <b>
              20
               years
            </b>
          </li>
          <li>
            The maximum amount of statutory redundancy pay is
             
            <b>
              £
              21,570
            </b>
          </li>
        </ul>
      </div>
    </div>
  </details>
</div>
`;

exports[`Redundancy pay calculator ResultsBox Component renders the component with provided props 4`] = `
<div
  class="border-[8px] rounded-bl-[36px] border-teal-400 p-6 mb-4 lg:mb-0"
>
  <h4
    class="text-xl md:text-2xl text-gray-800 font-bold mb-4"
  >
    You've told us your contractual redundancy pay will be:
  </h4>
  <h2
    class="text-3xl md:text-5xl text-gray-800 font-bold mb-4"
  >
    £
    2
  </h2>
  <h4
    class="text-xl md:text-2xl text-gray-800 font-bold mb-4"
  >
    But based on your answers you could be entitled to a minimum of:
  </h4>
  <h2
    class="text-3xl md:text-5xl text-gray-800 font-bold mb-4"
  >
    £
    1,587
  </h2>
  <p
    class="mb-4"
  >
    This figure is based on what you've told us. Your actual redundancy pay may vary depending on exact dates.
  </p>
  <details
    class="group tool-expand"
    data-testid="expandable-section"
  >
    <summary
      class="text-magenta-500 flex [&::-webkit-details-marker]:hidden cursor-pointer py-2 outline-none focus:shadow-expander-focus underline hover:no-underline group"
    >
      <svgr-mock
        class="group-open:rotate-[-180deg] text-magenta-500 shrink-0 w-5 mr-2"
      />
      <div
        class="block"
        data-testid="summary-block-title"
      >
        How is this calculated?
      </div>
    </summary>
    <div
      class="mb-4 text-gray-800 text-base leading-[28px] tracking-[0.18px] pt-2"
    >
      <div
        class="flex items-center"
        data-testid="list-element"
      >
        <ul
          class="marker:mr-2 marker:pr-2 space-y-2 marker:leading-snug list-disc marker:text-gray-800 px-2 mx-4 mt-4 mr-2 list-outside"
          start="-1"
        >
          <li>
            The minimum you're entitled to is the amount you'd get as statutory redundancy pay
          </li>
          <li>
            Your entitlement is
             
            <b>
              5.5
               
              weeks
            </b>
          </li>
        </ul>
      </div>
      <div
        class="my-4"
      >
        <hr
          class="border-slate-400"
        />
      </div>
      <div>
        <p
          class="pb-2"
        >
          You get:
        </p>
      </div>
      <div
        class="flex items-center"
        data-testid="list-element"
      >
        <ul
          class="marker:mr-2 marker:pr-2 space-y-2 marker:leading-snug list-disc marker:text-gray-800 px-2 mx-4 mr-2 list-outside"
          start="-1"
        >
          <li>
            <b>
              0.5 week's pay
            </b>
             for each full year worked when you were
             
            <b>
              under 22
            </b>
          </li>
          <li>
            <b>
              1 week's pay
            </b>
             for each full year worked when you're between
             
            <b>
              22 and 41
            </b>
          </li>
          <li>
            <b>
              1.5 week's pay
            </b>
             for each full year worked when you're
             
            <b>
              41 or older
            </b>
          </li>
        </ul>
      </div>
      <div
        class="my-4"
      >
        <hr
          class="border-slate-400"
        />
      </div>
      <div
        class="flex items-center"
        data-testid="list-element"
      >
        <ul
          class="marker:mr-2 marker:pr-2 space-y-2 marker:leading-snug list-disc marker:text-gray-800 px-2 mx-4 mr-2 list-outside"
          start="-1"
        >
          <li>
            Pay is capped at 
            <b>
              £
              719
            </b>
             per week
          </li>
          <li>
            Length of service is capped at
             
            <b>
              20
               years
            </b>
          </li>
          <li>
            The maximum amount of statutory redundancy pay is
             
            <b>
              £
              21,570
            </b>
          </li>
        </ul>
      </div>
    </div>
  </details>
</div>
`;

exports[`Redundancy pay calculator ResultsBox Component renders the component with provided props 5`] = `
<div
  class="border-[8px] rounded-bl-[36px] border-teal-400 p-6 mb-4 lg:mb-0"
>
  <h4
    class="text-xl md:text-2xl text-gray-800 font-bold mb-4"
  >
    You've told us your contractual redundancy pay will be:
  </h4>
  <h2
    class="text-3xl md:text-5xl text-gray-800 font-bold mb-4"
  >
    £
    2
  </h2>
</div>
`;
